--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
+pytest = "^8.3.4"
 
 [build-system]
 requires = ["poetry-core"]
